# oliot-llrp

./: Doxyfile  Makefile.am  Makefile.bak  Makefile.in  README  README.md  config.llrp  configure  configure.ac  reader-client-mode.cfg  reader-server-mode.cfg  reader.cfg  run.sh
Tests/: .cproject  .project  LLRPTestClient.cpp  LLRPTestClient.h  Makefile.bak  MyTestSuite1.h  TCR_R1.h  TCR_R10.h  TCR_R14.h  TCR_R3.h  TCR_R5.h  TCR_R6.h  TCR_R7.h  TCR_R8.h  TCR_R9.h  llrp-service-test Default.launch
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
elfin_app/: .cproject  .project  Makefile.am  Makefile.bak  Makefile.in  ReaderApp.cpp  ReaderApp.h
elfin_src/: .cproject  .project  AIOperation.cpp  AIOperation.h  AOAdmin.cpp  AOAdmin.h  AbstractAntennaOperation.cpp  AbstractAntennaOperation.h  AccessOperation.cpp  AccessOperation.h  CConnectionFnC.cpp  CConnectionFnC.h  CConnectionFnCMgr.cpp  CConnectionFnCMgr.h  ELFINReader.cpp  ELFINReader.h  ELFIN_Platform.cpp  ELFIN_Platform.h  ELFIN_ProgOpts.cpp  EventNotifier.cpp  EventNotifier.h  GPIEventListener.cpp  GPIEventListener.h  LLRPCore.cpp  LLRPCore.h  LLRPReader_Configurations.cpp  LLRPReader_Configurations.h  Makefile.am  Makefile.bak  Makefile.in  RFSurveyOperation.cpp  RFSurveyOperation.h  ROAdmin.cpp  ROAdmin.h  ReaderOperation.cpp  ReaderOperation.h  Scheduler.cpp  Scheduler.h  TimerTask.cpp  TimerTask.h
elfin_src/ReaderHandler/: AbstractReader.cpp  AbstractReader.h  ReaderCapabilities.h  SampleReader.cpp  SampleReader.h
elfin_src/Stubs/: StubAntenna.cpp  StubAntenna.h  StubApp.cpp  StubApp.h  StubGPIPort.cpp  StubGPIPort.h  StubGPOPort.cpp  StubGPOPort.h  StubReader.cpp  StubReader.h  StubTag.cpp  StubTag.h
elfin_src/Triggers/: AbstractTrigger.h  ROSpecTrigger.cpp  ROSpecTrigger.h
